2015-05-31  Karl Berry  <karl@freefriends.org>

	* po/Makevars (PACKAGE_GNU, MSGINIT_OPTIONS, PO_DEPENDS_ON_POT,
	DIST_DEPENDS_ON_UPDATE_PO): new variables to sync with
	Makevars.template from gettext-0.19.4 (and earlier.)

	* tp/tests/run_parser_all.sh,
	* tp/maintain/regenerate_cmd_tests.sh: use grep >/dev/null
	instead of -qs; Solaris 5.10 grep does not support -q.

	* tp/tests/run_parser_all.sh: exec /usr/xpg4/bin/sh for Solaris 5.10.

	* tp/tests/run_parser_all.sh: test "z$file" rather than "$zfile",
	as intended.

2015-05-30  Karl Berry  <karl@freefriends.org>

	* util/texi2dvi (generated_files_get): another attempt at making
	punctuation optional on the \openout line, for luatex.
	Report from Wybo Dekker.

2015-05-29  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (info_read_and_dispatch): Make call to 
	window_clear_echo_area conditional on read_key_sequence not 
	having dispatched to a user command itself, so error messages 
	aren't cleared.
	(read_key_sequence) <menu digit>: Clear echo area first.
	Reported by Benno Schulenberg.

2015-05-29  Benno Schulenberg <bensberg@justemail.net> (tiny change)

	* info/session.c (display_startup_message): Reword note to 
	translators.

2015-05-26  Karl Berry  <karl@freefriends.org>

	* doc/texinfo.tex (\setnonasciicharscatcodenonglobal):
	rm spurious blank line.  Report from David Kastrup,
	26 May 2015 15:14:06.	

2015-05-21  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/pseudotty.c: Check return value of fclose.  Use an int to 
	hold return value of read.  Consistent syntax for infinite 
	loops.  (Suggestions from Karl Berry.)

2015-05-20  Karl Berry  <karl@freefriends.org>

	* util/texi2dvi (generated_files_get): make punctuation optional
	on the \openout line, to cater to luatex 0.80.0.  Noted
	by Wybo Dekker, report http://tracker.luatex.org/view.php?id=909.

2015-05-18  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info-utils.c (printed_representation): Declare char * as 